# oxidebot_example

./: Cargo.toml  Readme.md
src/: echo.rs  filer.rs  interaction.rs  lib.rs  main.rs  print.rs  qq_special.rs  schedule.rs  set_message_reaction.rs  wait.rs
