[package]
name = "oxidebot_example"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidebot = "0.1.4"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
url = "2.5.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio_schedule = "0.3.2"
anyhow = "1.0.87"
onebot_v11 = "0.1.5"
futures = "0.3.30"
dashmap = "6.1.0"
onebot_v11_oxidebot = "0.1.4"
telegram_bot_oxidebot = "0.1.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
